--- a/Level1/Unit1/Speak/index.html
+++ b/Level1/Unit1/Speak/index.html
@@ -186,7 +186,7 @@
     </div>
     <div class="word" id="word"></div>
     <button id="startButton">
-        <img src="microfone.png" alt="Start Reading">
+        <img src="microfone.png" alt="Start Speaking">
     </button>
     <div class="result" id="result"></div>
     <div class="navigation">
@@ -209,7 +209,7 @@
         const imageFolderUrl = '../data1/imagens/';
         let words = [];
         let currentWordIndex = 0;
-        let wordsPlayed = 0; // Contador de palavras reproduzidas
+        let wordsTried = 0; // Contador de tentativas de palavras
         let recognitionTimeout;
         let tryAgainInProgress = false;
 
@@ -247,7 +247,6 @@
         const wordDiv = document.getElementById("word");
         const imageElement = document.getElementById("image");
         const iconElement = document.getElementById("icon");
-        const feedbackDiv = document.getElementById("feedback");
         const finalFeedbackDiv = document.getElementById("finalFeedback");
         const restartButton = document.getElementById("restartButton");
 
@@ -257,10 +256,10 @@
         recognition.maxAlternatives = 1;
 
         startButton.addEventListener('click', () => {
+            wordsTried++;
+            checkCompletion(); // Verifica se todas as palavras foram tentadas
             disableStartButton();
             startRecognition();
-            wordsPlayed++;
-            checkCompletion();
         });
 
         prevButton.addEventListener('click', () => {
@@ -339,11 +338,10 @@
 
         function resetFeedback() {
             resultDiv.textContent = "";
-            feedbackDiv.style.display = "none";
         }
 
         function checkCompletion() {
-            if (wordsPlayed === words.length) {
+            if (wordsTried === words.length) {
                 markActivityAsCompleted();
             }
         }
@@ -381,7 +379,7 @@
             currentWordIndex = 0;
             finalFeedbackDiv.style.display = "none";
             restartButton.style.display = "none";
-            wordsPlayed = 0; // Reinicia o contador de palavras reproduzidas
+            wordsTried = 0; // Reinicia o contador de tentativas de palavras
             loadWord(0);
         }
 
@@ -392,18 +390,6 @@
         function enableStartButton() {
             startButton.disabled = false;
         }
-
-        imageElement.addEventListener('click', () => {
-            readWordWithHighlight(words[currentWordIndex]);
-            wordsPlayed++;
-            checkCompletion();
-        });
-
-        iconElement.addEventListener('click', () => {
-            readWordWithHighlight(words[currentWordIndex]);
-            wordsPlayed++;
-            checkCompletion();
-        });
     </script>
 </body>
 </html>
