--- a/Level1/Unit1/Speak/index.html
+++ b/Level1/Unit1/Speak/index.html
@@ -368,6 +368,14 @@
             speechSynthesis.speak(utterance);
         }
 
+        imageElement.addEventListener('click', () => {
+            readWordWithHighlight(words[currentWordIndex]);
+        });
+
+        iconElement.addEventListener('click', () => {
+            readWordWithHighlight(words[currentWordIndex]);
+        });
+
         function showFinalFeedback() {
             finalFeedbackDiv.textContent = "You've completed all words!";
             finalFeedbackDiv.style.display = "block";
