--- a/Level1/Unit1/Speak/index.html
+++ b/Level1/Unit1/Speak/index.html
@@ -168,16 +168,13 @@
             }
         }
     </style>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
 <body>
     <button id="backButton" class="button">Back</button>
     <h1>Word Reading Practice</h1>
     <div class="container">
         <img id="image" class="image" src="" alt="Image">
-        <img id="icon" class="icon" src="businessman.png" alt="Icon">
+        <img id="icon" class="icon" src="businessman.png" alt="Icon" onclick="readWordWithHighlight(words[currentWordIndex])">
     </div>
     <div class="word" id="word"></div>
     <button id="startButton">
@@ -200,19 +197,6 @@
     </div>
 
     <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-            authDomain: "hannahenglishcourse.firebaseapp.com",
-            projectId: "hannahenglishcourse",
-            storageBucket: "hannahenglishcourse.appspot.com",
-            messagingSenderId: "449818788486",
-            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-            measurementId: "G-07VVJG9LRS",
-            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
-        };
-
-        firebase.initializeApp(firebaseConfig);
-
         const wordListUrl = '../data1/words.txt';
         const imageFolderUrl = '../data1/imagens/';
         let words = [];
@@ -250,11 +234,8 @@
         const startButton = document.getElementById("startButton");
         const prevButton = document.getElementById("prevButton");
         const nextButton = document.getElementById("nextButton");
-        const backButton = document.getElementById("backButton");
         const resultDiv = document.getElementById("result");
         const wordDiv = document.getElementById("word");
-        const finalFeedbackDiv = document.getElementById("finalFeedback");
-        const restartButton = document.getElementById("restartButton");
 
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.lang = 'en-US';
@@ -276,14 +257,6 @@
         nextButton.addEventListener('click', () => {
             disableStartButton();
             loadWord(currentWordIndex + 1);
-        });
-
-        backButton.addEventListener('click', () => {
-            window.history.back();
-        });
-
-        restartButton.addEventListener('click', () => {
-            restartGame();
         });
 
         recognition.onresult = (event) => {
@@ -354,7 +327,6 @@
 
         function markActivityAsCompleted() {
             console.log("Atividade concluída!");
-            ensureUserIsAuthenticated(updateNextPhase);
             document.getElementById('overlay').style.display = 'block';
             document.getElementById('completion-modal').style.display = 'block';
         }
@@ -362,48 +334,6 @@
         function closeModal() {
             document.getElementById('overlay').style.display = 'none';
             document.getElementById('completion-modal').style.display = 'none';
-        }
-
-        function ensureUserIsAuthenticated(callback) {
-            firebase.auth().onAuthStateChanged(function(user) {
-                if (user) {
-                    callback(user.uid);
-                } else {
-                    console.error("Usuário não autenticado");
-                }
-            });
-        }
-
-        async function updateNextPhase(userId) {
-            const currentPhase = getPhaseFromURL();
-            const nextPhase = parseInt(currentPhase) + 1;
-            const { level, unit } = getLevelAndUnitFromURL();
-            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
-
-            try {
-                if (currentPhase === "last") {
-                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                    await dbRef.set({ fase1: true });
-                    console.log(`Level ${nextLevel} / Unit 1 / Fase 1 criada.`);
-                } else {
-                    await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
-                    console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
-                }
-            } catch (error) {
-                console.error("Erro ao atualizar o progresso da fase:", error);
-            }
-        }
-
-        function getPhaseFromURL() {
-            const params = new URLSearchParams(window.location.search);
-            return params.get('fase');
-        }
-
-        function getLevelAndUnitFromURL() {
-            const url = window.location.pathname.split('/');
-            const level = url[1];
-            const unit = url[2];
-            return { level, unit };
         }
 
         function readWordWithHighlight(word, callback) {
@@ -417,14 +347,6 @@
             };
             speechSynthesis.speak(utterance);
         }
-
-        imageElement.addEventListener('click', () => {
-            readWordWithHighlight(words[currentWordIndex]);
-        });
-
-        iconElement.addEventListener('click', () => {
-            readWordWithHighlight(words[currentWordIndex]);
-        });
 
         function showFinalFeedback() {
             finalFeedbackDiv.textContent = "You've completed all words!";
