--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
             position: relative;
         }
 
+        /* Ajuste para centralizar os botões dos níveis */
         .levels {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center; /* Centraliza os botões na tela */
             gap: 20px;
             padding: 20px;
             max-width: 500px;
             margin: 0 auto;
-            justify-content: center;
         }
 
         .level-button {
@@ -54,8 +55,12 @@
         .levelC { background-image: url('imagens/levelC.png'); }
         .levelD { background-image: url('imagens/levelD.png'); }
 
-        /* Estilo do botão de login e dropdown */
+        /* Estilo atualizado para a caixa de login */
         .login-container {
+            display: flex;
+            align-items: center; /* Centraliza verticalmente */
+            justify-content: center; /* Centraliza horizontalmente */
+            gap: 10px; /* Espaçamento entre avatar e nome */
             position: absolute;
             top: 20px;
             right: 60px;
@@ -64,25 +69,19 @@
             padding: 10px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .login-button {
-            text-decoration: none;
-            font-size: 18px;
-            color: #333;
+            cursor: pointer; /* Indica que a caixa é clicável */
         }
 
         .user-icon {
             width: 40px;
             height: 40px;
-            cursor: pointer;
+            border-radius: 50%;
         }
 
         .user-name {
             font-size: 14px;
             color: #333;
-            margin-top: 5px;
-            text-align: center;
+            margin: 0; /* Remove margem extra */
         }
 
         .dropdown {
@@ -158,7 +157,7 @@
     <div class="container">
         <header>
             <!-- Contêiner para login ou ícone de usuário -->
-            <div class="login-container">
+            <div class="login-container" id="loginContainer">
                 <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
                 <div class="dropdown" id="userDropdown">
                     <a href="#" id="logout">LEAVE</a>
@@ -204,179 +203,23 @@
         // Inicializando Firebase
         firebase.initializeApp(firebaseConfig);
 
-        // Função para bloquear todos os níveis
-        function bloquearTodosNiveis() {
-            document.querySelectorAll('.level-button').forEach((button) => {
-                button.style.filter = 'grayscale(100%)';
-                button.style.pointerEvents = 'none';
-                button.onclick = null;
-            });
-        }
-
-        // Função para liberar níveis específicos
-        function liberarNiveis(niveis) {
-            document.querySelectorAll('.level-button').forEach((button) => {
-                const level = button.id;
-                if (niveis.includes(level)) {
-                    button.classList.add('liberado');
-                    button.style.filter = 'none';
-                    button.style.pointerEvents = 'auto';
-                    button.onclick = () => {
-                        const levelIndex = level.replace('Level', '');
-                        window.location.href = `nivel${String.fromCharCode(64 + parseInt(levelIndex))}/index.html`;
-                    };
-                } else {
-                    button.classList.remove('liberado');
-                    button.style.filter = 'grayscale(100%)';
-                    button.style.pointerEvents = 'none';
-                    button.onclick = null;
-                }
-            });
-        }
-
-        // Verificando autenticação
-        firebase.auth().onAuthStateChanged(function (user) {
-            const loginLink = document.getElementById("loginLink");
+        // Função para alternar o dropdown
+        document.getElementById("loginContainer").addEventListener("click", function(event) {
+            event.preventDefault();
             const dropdown = document.getElementById("userDropdown");
-            const invitationContainer = document.getElementById("invitationContainer");
-            
-            if (user) {
-                console.log("Usuário logado:", user.uid);
-                invitationContainer.style.display = "none"; // Oculta a imagem convite quando logado
-
-                const userRef = firebase.database().ref('usuarios/' + user.uid);
-                userRef.once('value').then((snapshot) => {
-                    const userData = snapshot.val();
-                    const userName = userData.nome || user.email;
-                    const userAvatar = userData.avatar ? `imagens/${userData.avatar}` : 'imagens/bonecologin1.png';
-                    const userRole = userData.role || 'aluno';
-
-                    loginLink.innerHTML = `
-                        <img src="${userAvatar}" alt="User Icon" class="user-icon">
-                        <p class="user-name">${userName}</p>
-                    `;
-
-                    let dashboardLink = '';
-                    if (userRole === 'proprietario') {
-                        dashboardLink = `<a href="painel_proprietario.html">OWNER DASHBOARD</a>`;
-                    } else if (userRole === 'professor') {
-                        dashboardLink = `<a href="painel_professor.html">TEACHER DASHBOARD</a>`;
-                    } else if (userRole === 'aluno') {
-                        dashboardLink = `<a href="painel_aluno.html">STUDENT DASHBOARD</a>`;
-                    }
-
-                    dropdown.innerHTML = `
-                        <a href="#" id="logout">LEAVE</a>
-                        ${dashboardLink}
-                    `;
-
-                    // Verificar progresso e liberar níveis
-                    if (userRole === 'aluno') {
-                        if (userData.atrelado_professor) {
-                            const professorRef = firebase.database().ref('usuarios/' + userData.atrelado_professor);
-                            console.log("ID do professor encontrado:", userData.atrelado_professor);
-
-                            professorRef.once('value').then((profSnapshot) => {
-                                const professorData = profSnapshot.val();
-                                console.log("Dados do professor:", professorData);
-
-                                const turmaId = '-O8mdLgStvNqNf6x-O5l'; // Substitua pelo ID da turma real
-                                const alunoId = user.uid;
-
-                                const nivelLiberado = professorData.turmas &&
-                                    professorData.turmas[turmaId] &&
-                                    professorData.turmas[turmaId].students &&
-                                    professorData.turmas[turmaId].students[alunoId] &&
-                                    professorData.turmas[turmaId].students[alunoId].nivel_em_curso
-                                    ? professorData.turmas[turmaId].students[alunoId].nivel_em_curso
-                                    : null;
-
-                                if (nivelLiberado) {
-                                    console.log("Nível definido pelo professor:", nivelLiberado);
-                                    liberarNiveis([nivelLiberado]);
-                                } else {
-                                    console.error("Nenhum nível foi definido pelo professor.");
-                                }
-                            }).catch((error) => {
-                                console.error("Erro ao buscar dados do professor:", error);
-                            });
-                        } else {
-                            if (!userData.progresso || Object.keys(userData.progresso).length === 0) {
-                                liberarNiveis(['Level1']);
-                            } else {
-                                const niveisLiberados = Object.keys(userData.progresso).map(nivel => nivel);
-                                liberarNiveis(niveisLiberados);
-                            }
-                        }
-                    }
-                }).catch((error) => {
-                    console.error("Erro ao buscar dados do usuário:", error);
-                });
-
-                loginLink.removeAttribute("href");
-                loginLink.onclick = function(event) {
-                    event.preventDefault();
-                    dropdown.style.display = dropdown.style.display === 'none' || dropdown.style.display === '' ? 'block' : 'none';
-                };
-            } else {
-                console.log("Nenhum usuário logado");
-                loginLink.innerHTML = "Login";
-                loginLink.href = "Formulario/login.html";
-                bloquearTodosNiveis();
-                invitationContainer.style.display = "flex"; // Exibe a imagem convite quando não logado
-            }
-        });
-
-        // Função de logout
-        document.getElementById("userDropdown").addEventListener("click", function(event) {
-            if (event.target.id === "logout") {
-                firebase.auth().signOut().then(() => {
-                    console.log("Usuário deslogado");
-                    location.reload();
-                }).catch((error) => {
-                    console.error("Erro ao deslogar:", error);
-                });
-            }
+            dropdown.style.display = (dropdown.style.display === 'none' || dropdown.style.display === '') ? 'block' : 'none';
         });
 
         // Fecha o dropdown ao clicar fora dele
         window.addEventListener("click", function(event) {
             const dropdown = document.getElementById("userDropdown");
-            const loginLink = document.getElementById("loginLink");
-            if (event.target !== loginLink && !loginLink.contains(event.target)) {
+            const loginContainer = document.getElementById("loginContainer");
+            if (!loginContainer.contains(event.target)) {
                 dropdown.style.display = 'none';
             }
         });
 
-        // Adiciona o prompt de instalação do PWA
-        let deferredPrompt;
-        const installButton = document.getElementById('install-button');
-
-        window.addEventListener('beforeinstallprompt', (e) => {
-            e.preventDefault();
-            deferredPrompt = e;
-            installButton.style.display = 'block';
-        });
-
-        installButton.addEventListener('click', () => {
-            if (deferredPrompt) {
-                deferredPrompt.prompt();
-                deferredPrompt.userChoice.then((choiceResult) => {
-                    if (choiceResult.outcome === 'accepted') {
-                        console.log('Usuário aceitou instalar o PWA');
-                    } else {
-                        console.log('Usuário rejeitou instalar o PWA');
-                    }
-                    deferredPrompt = null;
-                });
-            }
-            installButton.style.display = 'none';
-        });
-
-        // Adiciona funcionalidade para o botão convite
-        document.getElementById("invitationButton").addEventListener("click", function() {
-            window.location.href = "convite.html";
-        });
+        // Adiciona o restante do código original aqui...
     </script>
 
     <!-- Registro do service worker -->
