--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
             position: relative;
         }
 
-        /* Ajuste para centralizar os botões dos níveis */
         .levels {
-            display: flex;
+            display: flex; /* Altera para flexbox */
             flex-wrap: wrap;
-            justify-content: center; /* Centraliza os botões na tela */
+            justify-content: center; /* Centraliza os botões */
             gap: 20px;
             padding: 20px;
             max-width: 500px;
@@ -47,7 +46,6 @@
             height: 200px;
             background-size: cover;
             background-repeat: no-repeat;
-            display: inline-block;
         }
 
         .levelA { background-image: url('imagens/levelA.png'); }
@@ -55,12 +53,11 @@
         .levelC { background-image: url('imagens/levelC.png'); }
         .levelD { background-image: url('imagens/levelD.png'); }
 
-        /* Estilo atualizado para a caixa de login */
+        /* Estilo do botão de login e dropdown */
         .login-container {
-            display: flex;
+            display: flex; /* Alinha o conteúdo como flexbox */
             align-items: center; /* Centraliza verticalmente */
-            justify-content: center; /* Centraliza horizontalmente */
-            gap: 10px; /* Espaçamento entre avatar e nome */
+            gap: 10px; /* Espaço entre avatar e nome */
             position: absolute;
             top: 20px;
             right: 60px;
@@ -69,7 +66,13 @@
             padding: 10px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            cursor: pointer; /* Indica que a caixa é clicável */
+            cursor: pointer; /* Indica que é clicável */
+        }
+
+        .login-button {
+            text-decoration: none;
+            font-size: 18px;
+            color: #333;
         }
 
         .user-icon {
@@ -82,6 +85,7 @@
             font-size: 14px;
             color: #333;
             margin: 0; /* Remove margem extra */
+            text-align: center;
         }
 
         .dropdown {
@@ -203,7 +207,7 @@
         // Inicializando Firebase
         firebase.initializeApp(firebaseConfig);
 
-        // Função para alternar o dropdown
+        // Função para alternar o dropdown ao clicar em qualquer parte da caixa
         document.getElementById("loginContainer").addEventListener("click", function(event) {
             event.preventDefault();
             const dropdown = document.getElementById("userDropdown");
