--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
             <!-- Contêiner para login ou ícone de usuário -->
             <div class="login-container" id="loginContainer">
                 <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
-                <div class="dropdown" id="userDropdown">
-                    <a href="#" id="logout">LEAVE</a>
-                </div>
+                <div class="dropdown" id="userDropdown"></div>
             </div>
 
             <div class="logo-title">
@@ -166,10 +164,26 @@
                     const userData = snapshot.val();
                     const userName = userData.nome || user.email;
                     const userAvatar = userData.avatar ? `imagens/${userData.avatar}` : 'imagens/bonecologin1.png';
-                    
+
                     // Atualiza a interface do usuário
                     loginLink.innerHTML = `<img src="${userAvatar}" alt="User Icon" class="user-icon"><p class="user-name">${userName}</p>`;
                     invitationContainer.style.display = "none";
+
+                    // Define o dashboard conforme o tipo de usuário
+                    let dashboardLink = '';
+                    if (userData.role === 'proprietario') {
+                        dashboardLink = '<a href="painel_proprietario.html">OWNER DASHBOARD</a>';
+                    } else if (userData.role === 'professor') {
+                        dashboardLink = '<a href="painel_professor.html">TEACHER DASHBOARD</a>';
+                    } else {
+                        dashboardLink = '<a href="painel_aluno.html">STUDENT DASHBOARD</a>';
+                    }
+
+                    // Atualiza o dropdown com o link do dashboard e botão de logout
+                    userDropdown.innerHTML = `
+                        ${dashboardLink}
+                        <a href="#" id="logout">LEAVE</a>
+                    `;
 
                     // Ajusta o desbloqueio dos níveis
                     if (userData.progresso) {
@@ -206,6 +220,8 @@
             });
         }
 
+        <!-- Continuando o JavaScript -->
+
         // Alternar dropdown ao clicar
         document.getElementById("loginContainer").addEventListener("click", function(event) {
             event.preventDefault();
@@ -213,13 +229,63 @@
             dropdown.style.display = (dropdown.style.display === 'none' || dropdown.style.display === '') ? 'block' : 'none';
         });
 
-        // Fecha o dropdown ao clicar fora
+        // Fecha o dropdown ao clicar fora dele
         window.addEventListener("click", function(event) {
             const dropdown = document.getElementById("userDropdown");
             const loginContainer = document.getElementById("loginContainer");
             if (!loginContainer.contains(event.target)) {
                 dropdown.style.display = 'none';
             }
+        });
+
+        // Função para deslogar
+        document.addEventListener("click", function(event) {
+            if (event.target.id === "logout") {
+                firebase.auth().signOut().then(() => {
+                    console.log("Usuário deslogado");
+                    location.reload(); // Recarrega a página após deslogar
+                }).catch((error) => {
+                    console.error("Erro ao deslogar:", error);
+                });
+            }
+        });
+    </script>
+
+    <!-- Registro do service worker para PWA -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+                .then(registration => {
+                    console.log('Service Worker registrado com sucesso:', registration.scope);
+                })
+                .catch(error => {
+                    console.log('Falha ao registrar o Service Worker:', error);
+                });
+        }
+
+        // Prompt de instalação do PWA
+        let deferredPrompt;
+        const installButton = document.getElementById('install-button');
+
+        window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
+            deferredPrompt = e;
+            installButton.style.display = 'block';
+        });
+
+        installButton.addEventListener('click', () => {
+            if (deferredPrompt) {
+                deferredPrompt.prompt();
+                deferredPrompt.userChoice.then((choiceResult) => {
+                    if (choiceResult.outcome === 'accepted') {
+                        console.log('Usuário aceitou instalar o PWA');
+                    } else {
+                        console.log('Usuário rejeitou instalar o PWA');
+                    }
+                    deferredPrompt = null;
+                });
+            }
+            installButton.style.display = 'none';
         });
     </script>
 </body>
